# artifact-delib

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  STATUS.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/api/: default.yaml  llm.yaml  mock.yaml  pricing.example.yaml  vlm.yaml
configs/baseline/: direct_vlm.yaml  fixed_multiview.yaml  generic_mad.yaml  self_consistency.yaml  self_reflection.yaml  (+2 more)
data/: README.md
docs/: PAPER_WORK_DEFERRED.md  api_configuration.md  architecture.md  artifact_delib_pipeline.html  dataset_integration_spec.md  experiment_protocol.md
reports/: environment_audit.md  paper_writing_spec_build_report.md  smoke_test_report.md  smoke_test_report_api_router.md
requirements/: api.txt  base.txt  dev.txt
scripts/: build_oracle_routes.py  build_paper_writing_spec.ps1  build_paper_writing_spec.py  build_paper_writing_spec.sh  build_smoke_report.py  create_env.ps1  create_env.sh  download_met_images.py  generate_tables.py  run_data_split.py  run_qwen_smoke.ps1  run_qwen_smoke.sh  train_learned_router.py  verify.ps1  verify.sh
tests/: test_api.py  test_artifact_delib_comprehensive.py  test_artifact_delib_data.py  test_artifact_delib_phase2.py  test_artifact_delib_phase3.py  test_artifact_delib_phase4.py  test_artifact_delib_phase5.py  test_artifact_delib_phase6.py  test_artifact_delib_phase7.py  test_artifact_delib_phase8.py  test_artifact_delib_restructure.py  test_cli_module.py  test_config_schema.py  test_data.py  test_deferred_prompt.py  test_experiment_matrix.py  test_leakage_detector.py  test_methods.py  test_metrics_cli.py  test_paper_pdf.py  test_project_contract.py  test_prompts_config.py  test_remote_factory.py  test_reporting.py  test_runner.py  test_schemas.py  test_settings.py  test_smoke_validation.py  test_statistics.py  test_views.py
(+162 files in other folders)
