[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "histodelib"
version = "0.1.0"
description = "API-only disagreement-triggered bimodal deliberation engineering framework."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "HistoDelib contributors" }]
dependencies = []

[project.scripts]
histodelib = "histodelib.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/histodelib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"] # Typer declares CLI options in function defaults.

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
