[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifact-delib"
version = "0.1.0"
description = "Candidate-disagreement-driven dynamic multi-expert deliberation for ancient artifact identification."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "ArtifactDelib contributors" }]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "PyYAML>=6.0",
    "Jinja2>=3.0",
    "Pillow>=10.0",
    "filelock>=3.0",
]

[project.scripts]
artifact-delib = "artifact_delib.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
